# dynamic-fusion

./: .gitignore  README.md  codestyle_suggestions.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_ros.txt  requirements_simulator.txt
configs/: coco.yml
configs/data_generator/: coco.yml  coco_test.yml
configs/data_generator/simulator/: davis_model.yml  evs_explorer.yml
configs/interactive_visualizer/: visualizer.yml
configs/network_trainer/: pretraining_reconstruction.yml  train.yml  train_upscaling.yml  train_upscaling_aps_evs.yml  train_upscaling_aps_evs_uncertainty.yml  train_upscaling_aps_only.yml  train_upscaling_aps_only_uncertainty.yml  train_upscaling_first_aps.yml  train_upscaling_first_aps_uncertainty.yml  train_upscaling_no_unfolding.yml  training_both.yml
configs/network_trainer/04_03/: train_upscaling.yml  train_upscaling_uncertainty_lpips.yml
configs/network_trainer/04_10/: 1.18_partial.yml  weighted_uncertainty.yml
configs/simulator/: evs_explorer.yml
dynamic_fusion/data_generator/: configuration.py  data_generator.py  data_saver.py  event_discretizer.py  event_generator.py  image_loader.py  image_preprocessor.py  standalone_discretizer.py  threshold_adder.py  video_generator.py
dynamic_fusion/data_generator/utils/: image.py  video.py
dynamic_fusion/evaluator/: configuration.py  dataset.py  datatypes.py  evaluator.py
dynamic_fusion/interactive_visualizer/: __init__.py  configuration.py  network_handler.py  visualizer.py
dynamic_fusion/network_trainer/: __init__.py  configuration.py  data_handler.py  dataset.py  network_fitter.py  network_loader.py  trainer.py  training_monitor.py
dynamic_fusion/network_trainer/utils/: datatypes.py  loss.py  network.py  timer.py
dynamic_fusion/scripts/: bag_to_npy.py  calculate_std_statistics.py  generate_evr_histograms.py  generate_evr_histograms_e2vid_training.py  test_e2vid_data.py  test_event_camera_dataset.py  test_hq_frames.py  test_scale_dependency.py
dynamic_fusion/utils/: array.py  dataset.py  datatypes.py  discretized_events.py  evaluation.py  image.py  inference_configuration.py  loss.py  network.py  plotting.py  superresolution.py  transform.py  video.py  visualization.py
notebooks/: 01_discretization_visualization.ipynb  02_continuous_time.ipynb  03_test_continuous_time.ipynb  04_nearest_neighbor.ipynb  05_fix_off_by_one_GT.ipynb  06_test_matplotlib.ipynb  07_analyze_big_inputh5_size.ipynb  08_upsampling_coordinates.ipynb  08_upsampling_coordinates_dev.ipynb  09_upsampling_coordinates_2.ipynb  10_evaluation.ipynb  11_grid_testing.ipynb  12_interpolation_testing.ipynb  13_test_e2vid_dataset.ipynb  14_metrics_vs_scale.ipynb  15_event_rate_comparison.ipynb  16_generate_events_from_video.ipynb  17_visualize_events.ipynb  18_e2vid_training_dataset_exploration.ipynb  19_visualize_dataset.ipynb  20_bsrgb_training_dataset_exploration.ipynb  21_event_camera_dataset.ipynb  22_new_dataset.ipynb  23_eventhdr.ipynb  24_evenhdr_sim.ipynb  25_hq_frames.ipynb  26_std_eval.ipynb  27_test_subbins.ipynb  28_interpolation.ipynb  30_results_1to1.ipynb  38_examples.ipynb  40_performance.ipynb  42_checkerboard.ipynb  46_front_3d.ipynb
scripts/: delete_generated_video.py  fix_off_by_one.py  generate_all_subbins.sh  generate_data_with_retries.sh  show_memory.sh  train_all_subbins.sh  train_mean_std_count.sh
scripts/slurm/: run_script_singularity.sh  run_script_with_data_slurm.sh  test_e2vid_singularity.sh  test_e2vid_slurm.sh  test_scale_singularity.sh  test_scale_slurm.sh  train_singularity.sh  train_slurm.sh
singularity/: initialize.sh  launch_instance.sh  python39_recipe  start.sh  start_shell.sh
src/data_generator/: __init__.py  configuration.py  data_generator.py  data_saver.py  event_discretizer.py  event_generator.py  image_loader.py  image_preprocessor.py  video_generator.py
src/utils/: datatypes.py  discretized_events.py  image.py  seeds.py
(+34 files in other folders)
